# axum_getting_started

./: Cargo.toml  README.md  test.adoc
src/: bin.rs  lib.rs  main.rs
src/controllers/: header_controller.rs  mod.rs  temperature.rs
src/dto/: celsius.rs  fahrenheit.rs  mod.rs
src/layers/: mod.rs  string_prefixer.rs  timeout_layer.rs  user_agent_extractor.rs
tests/: exploratory_tower_middleware.rs  from_celsius_to_fahrenheit.rs  header_from_middleware.rs  hello_world.rs  timeout_error.rs  tower-middleware.rs  user_agent_header.rs
