[package]
name = "axum_hands_on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hands_on_lib"
path = "src/lib.rs"


[[bin]]
name = "hands_on_bin"
path = "src/bin.rs"

[dependencies]
axum = { version = "0.6.20", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
[dev-dependencies]
mime = "0.3.17"
serde_json = "1.0.108"
spectral = "0.6.0"
tower = "0.4.13"
