[package]
name = "axum_hands_on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hands_on_lib"
path = "src/lib.rs"


[[bin]]
name = "hands_on_bin"
path = "src/bin.rs"


[dependencies]
axum = "0.6.20"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
